--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,8 @@
         <item name="android:textSize">@dimen/_20sdp</item>
         <item name="android:gravity">start</item>
         <item name="android:paddingLeft">@dimen/_10sdp</item>
-        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">@dimen/_15sdp</item>
+        <item name="android:layout_marginBottom">0dp</item>
         <!--<item name="android:includeFontPadding">false</item>-->
         <!--<item name="android:minWidth">0dip</item>-->
         <!--<item name="android:minHeight">0dip</item>-->
