--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -35,7 +35,7 @@
             android:background="@color/pankaj_pad_button_text_color_white"
             android:editable="false"
             android:gravity="center_horizontal"
-            android:text="M 123"
+            android:text=""
             android:textAlignment="viewStart"
             android:textSize="@dimen/_18sdp" />
 
