--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,28 @@
     <color name="pankaj_light_grey">#767676</color>
     <!--<color name="pankaj_light_pink">#FF4081</color>-->
 
+    <color name="pankaj_theme_dark_red">#B71C1C</color>
+    <color name="pankaj_theme_dark_extra_pink">#C51162</color>
+    <color name="pankaj_theme_dark_purple">#9C27B0</color>
+    <color name="pankaj_theme_dark_blue">#4A148C</color>
+    <color name="pankaj_theme_dark_blue_2">#0D47A1</color>
+    <color name="pankaj_theme_dark_indigo">#3F51B5</color>
+    <color name="pankaj_theme_dark_cyan">#3F51B5</color>
+    <color name="pankaj_theme_dark_teal">#00695C</color>
+    <color name="pankaj_theme_dark_green">#2E7D32</color>
+    <color name="pankaj_theme_dark_light_green">#33691E</color>
+    <color name="pankaj_theme_dark_lime">#827717</color>
+    <color name="pankaj_theme_dark_yellow">#FFD600</color>
+    <color name="pankaj_theme_dark_orange">#f86b00</color>
+    <color name="pankaj_theme_dark_deep_orange">#BF360C</color>
+    <color name="pankaj_theme_dark_deep_brown">#5D4037</color>
+    <color name="pankaj_theme_dark_grey">#616161</color>
+    <color name="pankaj_theme_dark_blue_grey">#455A64</color>
+    <color name="pankaj_theme_dark_black">#000000</color>
+    <color name="pankaj_theme_dark_white">#FFFFFF</color>
+
+
+
     <color name="pankaj_dark_red">#ff2604</color>
     <color name="pankaj_dark_blue">#303F9F</color>
     <color name="pankaj_dark_green">#4c9140</color>
