--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,16 +12,17 @@
     <color name="pankaj_theme_dark_red">#B71C1C</color>
     <color name="pankaj_theme_dark_pink">#E91E63</color>
     <color name="pankaj_theme_dark_purple">#9C27B0</color>
-    <color name="pankaj_theme_dark_blue">#4A148C</color>
-    <color name="pankaj_theme_dark_blue_2">#0D47A1</color>
+    <color name="pankaj_theme_dark_dark_purple">#4A148C</color>
+    <color name="pankaj_theme_dark_blue">#0D47A1</color>
+    <color name="pankaj_theme_dark_light_blue">#0277BD</color>
     <color name="pankaj_theme_dark_indigo">#3F51B5</color>
     <color name="pankaj_theme_dark_cyan">#3F51B5</color>
     <color name="pankaj_theme_dark_teal">#00695C</color>
     <color name="pankaj_theme_dark_green">#2E7D32</color>
     <color name="pankaj_theme_dark_light_green">#33691E</color>
     <color name="pankaj_theme_dark_lime">#827717</color>
-    <color name="pankaj_theme_dark_yellow">#FFD600</color>
-    <color name="pankaj_theme_dark_orange">#f86b00</color>
+    <color name="pankaj_theme_dark_yellow">#FBC02D</color>
+    <color name="pankaj_theme_dark_orange">#FF6D00</color>
     <color name="pankaj_theme_dark_deep_orange">#BF360C</color>
     <color name="pankaj_theme_dark_deep_brown">#5D4037</color>
     <color name="pankaj_theme_dark_grey">#616161</color>
