--- a/app/src/main/res/layout/activity_sliding_main.xml
+++ b/app/src/main/res/layout/activity_sliding_main.xml
@@ -1,34 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent" >
 
-    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
+    <!-- The main content view -->
+
     <FrameLayout
-        android:id="@+id/content_frame"
+        android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
-    <!--<android.support.design.widget.NavigationView-->
-        <!--android:id="@+id/nav_view"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_gravity="start"-->
-        <!--android:fitsSystemWindows="true" />-->
+    <!-- The navigation drawer -->
 
     <ListView
         android:id="@+id/slider_list"
         android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#ffffff"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp">
-
-    </ListView>
+        android:dividerHeight="0dp"
+        />
 
 </android.support.v4.widget.DrawerLayout>
