--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -103,11 +103,11 @@
         <item name="android:paddingTop">5dp</item>
     </style>
 
-    <style name="PadButtonStyle.Numeric.Evaluate.Pink" parent="PadButtonStyle.Numeric">
+    <style name="PadButtonStyle.Numeric.Evaluate.Pink" parent="PadButtonStyle.Numeric.Evaluate">
         <item name="android:background">@color/pankaj_theme_dark_pink</item>
     </style>
 
-    <style name="PadButtonStyle.Numeric.Evaluate.LightBlue" parent="PadButtonStyle.Numeric">
+    <style name="PadButtonStyle.Numeric.Evaluate.LightBlue" parent="PadButtonStyle.Numeric.Evaluate">
         <item name="android:background">@color/pankaj_theme_dark_light_blue</item>
     </style>
 
