--- a/app/src/main/res/layout/pad_standard_default.xml
+++ b/app/src/main/res/layout/pad_standard_default.xml
@@ -112,21 +112,36 @@
         app:layout_columnWeight="1" />
 
 
+    <!--<ImageButton-->
+        <!--android:id="@+id/buttonBack"-->
+        <!--style="@style/PadButtonStyle.Numeric.Operator"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:onClick="calculateMe"-->
+        <!--android:src="@drawable/ic_backspace_pankaj"-->
+        <!--android:adjustViewBounds="false"-->
+        <!--android:scaleType="centerInside"-->
+        <!--android:padding="0dp"-->
+        <!--android:layout_margin="0.1dp"-->
+        <!--android:tag="BACK"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill"-->
+        <!--app:layout_rowWeight="1" />-->
+
     <ImageButton
         android:id="@+id/buttonBack"
         style="@style/PadButtonStyle.Numeric.Operator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="calculateMe"
-        android:src="@drawable/ic_backspace_pankaj"
+        android:layout_margin="0.1dp"
         android:adjustViewBounds="false"
+        android:onClick="calculateMe"
         android:scaleType="centerInside"
-        android:padding="0dp"
+        android:src="@drawable/ic_backspace_pankaj"
         android:tag="BACK"
         app:layout_columnWeight="1"
         app:layout_gravity="fill"
         app:layout_rowWeight="1" />
-
 
 
 
