Non solid Color Operator Button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,7 +29,7 @@
     <color name="pankaj_theme_dark_blue_grey">#455A64</color>
     <color name="pankaj_theme_dark_black">#000000</color>
     <color name="pankaj_theme_dark_white">#FFFFFF</color>
-    <color name="pankaj_theme_grid_line_color">#c4daec</color>
+    <color name="pankaj_theme_grid_line_color">#d1d1d1</color>
 
 
 
