--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,7 +81,7 @@
         <!--<item name="android:paddingTop">15dp</item>-->
         <item name="android:layout_margin">0.1dp</item>
         <item name="android:layout_columnWeight">1</item>
-        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
         <!--<item name="android:layout_width">65dp </item>-->
         <!--<item name="android:layout_height">wrap_content</item>-->
     </style>
