--- a/app/src/main/res/layout/pad_standard_default.xml
+++ b/app/src/main/res/layout/pad_standard_default.xml
@@ -105,28 +105,12 @@
     <!--<TableRow>-->
     <Button
         android:id="@+id/buttonPercentage"
-        style="@style/PadButtonStyle.Numeric.Operator"
+        style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"
         android:onClick="calculateMe"
         android:tag="%"
         android:text="%"
         app:layout_columnWeight="1" />
 
-
-    <!--<ImageButton-->
-        <!--android:id="@+id/buttonBack"-->
-        <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:onClick="calculateMe"-->
-        <!--android:src="@drawable/ic_backspace_pankaj"-->
-        <!--android:adjustViewBounds="false"-->
-        <!--android:scaleType="centerInside"-->
-        <!--android:padding="0dp"-->
-        <!--android:layout_margin="0.1dp"-->
-        <!--android:tag="BACK"-->
-        <!--app:layout_columnWeight="1"-->
-        <!--app:layout_gravity="fill"-->
-        <!--app:layout_rowWeight="1" />-->
 
     <!--<ImageButton-->
         <!--android:id="@+id/buttonBack"-->
@@ -146,7 +130,7 @@
 
     <ImageButton
         android:id="@+id/buttonBack"
-        style="@style/PadButtonStyle.Numeric.Operator"
+        style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"
         android:onClick="calculateMe"
         android:scaleType="centerInside"
         android:src="@drawable/ic_backspace_pankaj"
@@ -157,7 +141,7 @@
 
     <Button
         android:id="@+id/buttonAllClear"
-        style="@style/PadButtonStyle.Numeric.Operator"
+        style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"
         android:onClick="clearAll"
         android:tag="ALLCLEAR"
         android:text="C"
@@ -165,7 +149,7 @@
 
     <Button
         android:id="@+id/buttonDivide"
-        style="@style/PadButtonStyle.Numeric.Operator"
+        style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"
         android:onClick="calculateMe"
         android:tag="÷"
         android:text="÷"
