--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,7 +73,7 @@
 
     <style name="PadButtonStyle.Numeric" parent="PadButtonStyle">
         <!--<item name="android:layout_margin">8dip</item>-->
-        <item name="android:textSize">@dimen/_28sdp</item>
+        <item name="android:textSize">@dimen/_30sdp</item>
         <item name="fontFamily">sans-serif-light</item>
         <item name="android:paddingBottom">15dp</item>
         <item name="android:paddingTop">15dp</item>
@@ -90,6 +90,15 @@
     <style name="PadButtonStyle.Numeric.Operator" parent="PadButtonStyle.Numeric">
         <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
         <!--<item name="android:textColor">@color/pankaj_pad_button_text_color</item>-->
+        <item name="android:background">@color/pankaj_pad_button_text_color_white</item>
+    </style>
+
+
+    <style name="PadButtonStyle.Numeric.Operator.ExtraPadding" parent="PadButtonStyle.Numeric">
+        <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
+        <!--<item name="android:textColor">@color/pankaj_pad_button_text_color</item>-->
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:background">@color/pankaj_pad_button_text_color_white</item>
     </style>
 
