--- a/app/src/main/res/layout/pad_standard_default.xml
+++ b/app/src/main/res/layout/pad_standard_default.xml
@@ -128,16 +128,24 @@
         <!--app:layout_rowWeight="1" />-->
 
 
-    <ImageButton
-        android:id="@+id/buttonBack"
+    <!--<ImageButton-->
+        <!--android:id="@+id/buttonBack"-->
+        <!--style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"-->
+        <!--android:onClick="calculateMe"-->
+        <!--android:scaleType="centerInside"-->
+        <!--android:src="@drawable/ic_backspace_pankaj"-->
+        <!--android:tag="BACK"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill"-->
+        <!--app:layout_rowWeight="1" />-->
+
+    <Button
+        android:id="@+id/buttonToPowerOf"
         style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"
         android:onClick="calculateMe"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_backspace_pankaj"
-        android:tag="BACK"
-        app:layout_columnWeight="1"
-        app:layout_gravity="fill"
-        app:layout_rowWeight="1" />
+        android:tag="^"
+        android:text="^"
+        app:layout_columnWeight="1" />
 
     <Button
         android:id="@+id/buttonAllClear"
