--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,8 +75,8 @@
         <!--<item name="android:layout_margin">8dip</item>-->
         <item name="android:textSize">@dimen/_30sdp</item>
         <item name="fontFamily">sans-serif-light</item>
-        <item name="android:paddingBottom">15dp</item>
-        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">14dp</item>
+        <item name="android:paddingTop">14dp</item>
         <!--<item name="android:paddingBottom">15dp</item>-->
         <!--<item name="android:paddingTop">15dp</item>-->
         <item name="android:layout_margin">0.1dp</item>
@@ -93,11 +93,22 @@
         <item name="android:background">@color/pankaj_pad_button_text_color_white</item>
     </style>
 
+    <style name="PadButtonStyle.Numeric.Operator.NoMargin" parent="PadButtonStyle.Numeric">
+        <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
+        <!--<item name="android:textColor">@color/pankaj_pad_button_text_color</item>-->
+        <item name="android:background">@color/pankaj_pad_button_text_color_white</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginRight">0dp</item>
+    </style>
+
 
     <style name="PadButtonStyle.Numeric.Operator.ExtraPadding" parent="PadButtonStyle.Numeric">
         <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
         <!--<item name="android:textColor">@color/pankaj_pad_button_text_color</item>-->
-        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingTop">10dp</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:background">@color/pankaj_pad_button_text_color_white</item>
     </style>
