--- a/app/src/main/res/layout/pad_standard_default_header.xml
+++ b/app/src/main/res/layout/pad_standard_default_header.xml
@@ -72,8 +72,9 @@
         style="@style/PadButtonStyle.Numeric.Operator.NoMargin"
         android:onClick="calculateMe"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_backspace_pankaj"
-        android:tag="BACK"
+        android:src="@drawable/ic_pankaj_undo"
+        android:tag="UNDOLASTEVALUATE"
+        android:visibility="invisible"
         app:layout_columnWeight="1"
         app:layout_gravity="fill"
         app:layout_rowWeight="1" />
