--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,6 +104,19 @@
         <item name="android:layout_marginRight">0dp</item>
     </style>
 
+    <style name="PadButtonStyle.Borderless" parent="@style/Widget.AppCompat.Button.Borderless">
+        <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
+        <!--<item name="android:textColor">@color/pankaj_pad_button_text_color</item>-->
+        <item name="android:background">@color/pankaj_pad_button_text_color_white</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginRight">0dp</item>
+        <item name="android:textSize">@dimen/_30sdp</item>
+
+    </style>
+
 
     <style name="PadButtonStyle.Numeric.Operator.ExtraPadding" parent="PadButtonStyle.Numeric">
         <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
