--- a/app/src/main/res/layout/keypad_standard.xml
+++ b/app/src/main/res/layout/keypad_standard.xml
@@ -89,24 +89,25 @@
     <!--app:layout_rowWeight="1" />-->
 
 
-    <!--<ImageButton-->
-    <!--android:id="@+id/buttonBack"-->
-    <!--style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"-->
-    <!--android:onClick="calculateMe"-->
-    <!--android:scaleType="centerInside"-->
-    <!--android:src="@drawable/ic_backspace_pankaj"-->
-    <!--android:tag="BACK"-->
-    <!--app:layout_columnWeight="1"-->
-    <!--app:layout_gravity="fill"-->
-    <!--app:layout_rowWeight="1" />-->
-
-    <Button
-        android:id="@+id/buttonToPowerOf"
+    <ImageButton
+        android:id="@+id/buttonBack"
         style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"
         android:onClick="calculateMe"
-        android:tag="^"
-        android:text="^"
-        app:layout_columnWeight="1" />
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_backspace_pankaj"
+        android:tag="BACK"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"
+        app:layout_rowWeight="1" />
+
+    <!--<Button-->
+        <!--android:id="@+id/buttonToPowerOf"-->
+        <!--style="@style/PadButtonStyle.Numeric.Operator.ExtraPadding"-->
+        <!--android:onClick="calculateMe"-->
+        <!--android:tag="^"-->
+        <!--android:text="^"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--android:visibility="gone"/>-->
 
     <Button
         android:id="@+id/buttonAllClear"
