--- a/app/src/main/res/layout/mylayout_phone_standard.xml
+++ b/app/src/main/res/layout/mylayout_phone_standard.xml
@@ -50,7 +50,8 @@
     <include android:id="@+id/keyPadHeader"
         layout="@layout/pad_standard_default_header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <include android:id="@+id/keyPadKeys"
         layout="@layout/keypad_standard"
