--- a/app/src/main/res/layout/mylayout_phone_standard.xml
+++ b/app/src/main/res/layout/mylayout_phone_standard.xml
@@ -47,11 +47,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
-    <include android:id="@+id/keyPadHeader"
-        layout="@layout/pad_standard_default_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
+    <!--<include android:id="@+id/keyPadHeader"-->
+        <!--layout="@layout/pad_standard_default_header"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:visibility="gone"/>-->
 
     <include android:id="@+id/keyPadKeys"
         layout="@layout/keypad_standard"
