--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openThemeSettings"
-            android:text="Theme"
+            android:text="Color Theme"
             app:layout_columnWeight="1" />
 
         <TextView
