--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -36,6 +36,7 @@
         <!-- Row 1 starts -->
 
         <TextView
+            android:id="@+id/precisionTextView"
             style="@style/PadButtonStyle.Settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
 
 
         <TextView
+            android:id="@+id/thousandSeperatorTextView"
             style="@style/PadButtonStyle.Settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,6 +74,7 @@
 
 
         <TextView
+            android:id="@+id/enableAnimationTextView"
             style="@style/PadButtonStyle.Settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
