--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -129,7 +129,7 @@
             style="@style/PadButtonStyle.Settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Keypad Layout - To be done"
+            android:text="Keypad Layout"
             app:layout_columnWeight="1" />
 
         <TextView
