--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <!--<color name="pankaj_light_pink">#FF4081</color>-->
 
     <color name="pankaj_theme_dark_red">#B71C1C</color>
-    <color name="pankaj_theme_dark_pink">#E91E63</color>
+    <color name="pankaj_theme_dark_pink">#FF4081</color>
     <color name="pankaj_theme_dark_purple">#9C27B0</color>
     <color name="pankaj_theme_dark_dark_purple">#4A148C</color>
     <color name="pankaj_theme_dark_blue">#0D47A1</color>
