Non solid Color Operator Button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,8 @@
     <color name="pankaj_theme_dark_white">#FFFFFF</color>
     <color name="pankaj_theme_grid_line_color">#FFFFFF</color>
 
+    <color name="pankaj_very_light_grey">#bfbebe</color>
+
 
 
     <color name="pankaj_dark_red">#ff2604</color>
