--- a/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/app/src/main/res/layout/layout_custom_dialog.xml
@@ -7,8 +7,12 @@
 
         <ListView
             android:id="@+id/listView1"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_400sdp"/>
 
 </LinearLayout>
 
