--- a/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/app/src/main/res/layout/layout_custom_dialog.xml
@@ -5,69 +5,39 @@
     android:orientation="vertical"
     android:padding="15dp">
 
-        <ListView
-            android:id="@+id/listView1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-        </ListView>
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/listView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-        <TextView
-            android:id="@+id/listViewFillerText"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_400sdp"
-            android:textSize="@dimen/_20sdp"
-            android:gravity="center"/>
+    </com.baoyz.swipemenulistview.SwipeMenuListView>
+
+    <!--<ListView-->
+    <!--android:id="@+id/listView1"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="fill_parent">-->
+    <!--</ListView>-->
+
+    <TextView
+        android:id="@+id/listViewFillerText"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_400sdp"
+        android:gravity="center"
+        android:textSize="@dimen/_20sdp" />
 
 </LinearLayout>
 
 
+    <!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:gravity="center_vertical"--><!--android:orientation="horizontal">-->
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:gravity="center_vertical"-->
-    <!--android:orientation="horizontal">-->
+    <!--<TextView--><!--android:layout_width="0dp"--><!--android:layout_height="wrap_content"--><!--android:layout_weight=".3"--><!--android:text="Username:" />-->
 
-    <!--<TextView-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight=".3"-->
-    <!--android:text="Username:" />-->
+    <!--<EditText--><!--android:id="@+id/et_username"--><!--android:layout_width="0dp"--><!--android:layout_height="wrap_content"--><!--android:layout_weight=".7"--><!--android:imeOptions="actionDone"--><!--android:singleLine="true" />--><!--</LinearLayout>-->
 
-    <!--<EditText-->
-    <!--android:id="@+id/et_username"-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight=".7"-->
-    <!--android:imeOptions="actionDone"-->
-    <!--android:singleLine="true" />-->
-    <!--</LinearLayout>-->
+    <!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:gravity="center_vertical"--><!--android:orientation="horizontal">-->
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:gravity="center_vertical"-->
-    <!--android:orientation="horizontal">-->
+    <!--<TextView--><!--android:layout_width="0dp"--><!--android:layout_height="wrap_content"--><!--android:layout_weight=".3"--><!--android:text="Email:" />-->
 
-    <!--<TextView-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight=".3"-->
-    <!--android:text="Email:" />-->
+    <!--<EditText--><!--android:id="@+id/et_email"--><!--android:layout_width="0dp"--><!--android:layout_height="wrap_content"--><!--android:layout_weight=".7"--><!--android:imeOptions="actionDone"--><!--android:inputType="textEmailAddress"--><!--android:singleLine="true" />--><!--</LinearLayout>-->
 
-    <!--<EditText-->
-    <!--android:id="@+id/et_email"-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight=".7"-->
-    <!--android:imeOptions="actionDone"-->
-    <!--android:inputType="textEmailAddress"-->
-    <!--android:singleLine="true" />-->
-    <!--</LinearLayout>-->
-
-    <!--<CheckBox-->
-    <!--android:id="@+id/cb_show_pass"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:text="Toggle Password/Text View" />-->
+    <!--<CheckBox--><!--android:id="@+id/cb_show_pass"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_marginTop="10dp"--><!--android:text="Toggle Password/Text View" />-->
