--- a/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/app/src/main/res/layout/layout_custom_dialog.xml
@@ -6,7 +6,7 @@
     android:padding="15dp">
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/listView1"
+        android:id="@+id/listViewSwipe"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
