--- a/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/app/src/main/res/layout/layout_custom_dialog.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical"
     android:padding="15dp">
 
-    <com.baoyz.swipemenulistview.SwipeMenuListView
+    <ListView
         android:id="@+id/listViewSwipe"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    </com.baoyz.swipemenulistview.SwipeMenuListView>
+    </ListView>
 
     <!--<ListView-->
     <!--android:id="@+id/listView1"-->
