--- a/app/src/main/res/layout/layout_custom_dialog_recycler.xml
+++ b/app/src/main/res/layout/layout_custom_dialog_recycler.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,3 +10,11 @@
         android:scrollbars="vertical" />
 
 </android.support.constraint.ConstraintLayout>
+
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--&lt;!&ndash; A RecyclerView with some commonly used attributes &ndash;&gt;<android.support.v7.widget.RecyclerView-->
+<!--android:id="@+id/my_recycler_view"-->
+<!--android:scrollbars="vertical"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent" />-->
