--- a/app/src/main/res/layout/layout_custom_dialog_recycler.xml
+++ b/app/src/main/res/layout/layout_custom_dialog_recycler.xml
@@ -9,6 +9,15 @@
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
 
+
+    <TextView
+        android:id="@+id/listViewFillerText"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_400sdp"
+        android:gravity="center"
+        android:textSize="@dimen/_20sdp" />
+
+
 </android.support.constraint.ConstraintLayout>
 
 
