--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -49,7 +49,7 @@
             android:layout_height="@dimen/_25sdp"
             android:adjustViewBounds="false"
             android:background="@color/pankaj_pad_numeric_background_color_white"
-            android:onClick="showHistory"
+            android:onClick="showHistoryMe"
             android:scaleType="centerInside"
             android:layout_gravity="center_horizontal|center_vertical"
             android:src="@drawable/ic_history_black_48px" />
