--- a/app/src/main/res/layout/layout_custom_dialog_recycler.xml
+++ b/app/src/main/res/layout/layout_custom_dialog_recycler.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dp">
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical">
 
+    </android.support.v7.widget.RecyclerView>
 
     <TextView
         android:id="@+id/listViewFillerText"
@@ -16,9 +20,7 @@
         android:layout_height="@dimen/_400sdp"
         android:gravity="center"
         android:textSize="@dimen/_20sdp" />
-
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
     <!--<?xml version="1.0" encoding="utf-8"?>-->
